--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost/fastapi_db
-TEST_DATABASE_URL=postgresql://username:password@localhost/test_fastapi_db
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fastapi_db
+TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fastapi_test_db
 
 # JWT Configuration
 SECRET_KEY=your-secret-key-here
