--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,48 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-jinja2==3.1.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+annotated-types==0.7.0
+anyio==3.7.1
+bcrypt==4.3.0
+certifi==2025.7.14
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.5
+dnspython==2.7.0
+ecdsa==0.19.1
+email-validator==2.2.0
+fastapi==0.104.1
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
 httpx==0.25.2
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.2
+Mako==1.3.10
+MarkupSafe==3.0.2
+packaging==25.0
+passlib==1.7.4
+pluggy==1.6.0
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.27.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.24.0
+watchfiles==1.1.0
+websockets==15.0.1
